--- a/index.html
+++ b/index.html
@@ -208,7 +208,30 @@
       </header>
 
       <!-- main -->
-      <main></main>
+      <main>
+        <!-- jumbotron -->
+        <section
+          id="jumbotron"
+          class="d-flex flex-direction-wrap align-items-center"
+        >
+          <div class="container pb-3">
+            <div class="row">
+              <div
+                class="col-12 d-flex flex-column justify-content-start align-items-center"
+              >
+                <p class="fs-2 fw-semibold mb-0">Commence Business</p>
+                <h1 class="h1 display-3 fw-light mb-4">
+                  Distant Mentoring Program
+                </h1>
+
+                <button type="button" class="btn btn-light btn-lg rounded mx-1">
+                  Download free guidebook &rarr;
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
 
       <!-- footer -->
       <footer></footer>
