--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- header -->
       <header>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg bg-light py-3">
+        <nav class="navbar navbar-expand-lg py-3">
           <div class="container-fluid">
             <!-- humberger menu -->
             <button
@@ -197,6 +197,7 @@
                       />
                       <button class="btn fw-bolder" type="button">
                         <i class="fa-solid fa-magnifying-glass"></i>
+                        Search
                       </button>
                     </form>
                   </li>
@@ -212,7 +213,7 @@
         <!-- jumbotron -->
         <section
           id="jumbotron"
-          class="d-flex flex-direction-wrap align-items-center"
+          class="d-flex flex-direction-wrap align-items-center mb-5"
         >
           <div class="container pb-3">
             <div class="row">
@@ -229,6 +230,425 @@
                 </button>
               </div>
             </div>
+          </div>
+        </section>
+
+        <!-- work culture / section 2 -->
+        <section id="work-culture">
+          <div class="container py-5 mb-5">
+            <div class="row align-items-center my-5 px-5 position-relative">
+              <div class="col-12 col-md-6">
+                <p class="text-secondary">
+                  EVERYTHING WITH <span class="fw-bold"> MAXCOACH</span>
+                </p>
+                <h2 class="h2 title-color display-5 fw-semibold mb-3">
+                  Learn about our
+                  <p class="mb-0 text-color fw-light">Work Culture</p>
+                  at MaxCoach
+                </h2>
+                <p class="text-secondary mb-4 mr">
+                  Spend some time to visit our website or head office and
+                  discover our current courses, enrollment procedure, and
+                  registration deadline. We're opening new classes every
+                  beginning of each month.
+                </p>
+                <p class="text-secondary mb-4">
+                  Have questions? <a href="#"> Get Free Guide &rarr; </a>
+                </p>
+              </div>
+              <div class="col-12 col-md-6">
+                <img
+                  src="./img/img/stock-full-hd-10-ohki1ayywq3cqutettrncduujpoaorifqu4relt2ts.jpg"
+                  alt="photo"
+                  class="img-fluid"
+                />
+                <img src="./img/img/maxcoach-shape-07-100x100.png" alt="" />
+                <img
+                  class="sec2-img2"
+                  src="./img/img/about-us-01-ohkia3qg98rq9vg3s0mn2hkflr1migdqdw370qnegc.jpg"
+                  alt="photo"
+                />
+                <img src="./img/img/maxcoach-shape-02.png" alt="" />
+                <span class="shape"> </span>
+              </div>
+
+              <!-- numbers -->
+              <div
+                class="row row-cols-4 mt-5 align-items-center justify-content-center numbers text-center"
+              >
+                <div class="col">
+                  <span>129+</span>
+                  <p class="fw-bold">ENROLLED LEANERS</p>
+                </div>
+
+                <div class="col">
+                  <span>80</span>
+                  <p class="fw-bold">FINISHED SESSIONS</p>
+                </div>
+
+                <div class="col">
+                  <span>4%</span>
+                  <p class="fw-bold">SATISFACTION RATE</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- upgrade your skills / section 3 -->
+        <section id="upgrade-skills">
+          <div class="container mb-5">
+            <div class="row align-items-center gx-5">
+              <!-- left side of section 3 -->
+              <div class="col-12 col-md-6 position-relative">
+                <img
+                  class="sec3-main-img"
+                  src="./img/img/stock-full-hd-11-670x450.jpg"
+                  alt="photo"
+                  class="img-fluid"
+                />
+                <img
+                  src="./img/img/maxcoach-shape-07-150x150.png"
+                  alt="shape"
+                />
+                <img
+                  src="./img/img/maxcoach-shape-05-150x150.png"
+                  alt="photo"
+                />
+                <img src="./img/svg/svg-0.svg" alt="svg" />
+                <span class="shape"></span>
+              </div>
+              <!-- right side of section 3 -->
+              <div class="col-12 col-md-6 sec3-right-side">
+                <p class="text-secondary">HOW WE WORK</p>
+                <h2 class="h2 title-color display-5 fw-semibold mb-3">
+                  Upgrade Your Skills
+                  <span class="mb-0 text-color fw-light"
+                    >Upgrade Your Life</span
+                  >
+                </h2>
+                <p class="text-secondary mb-4 lh-lg mr">
+                  Opening up more opportunities in front of you to get the
+                  ticket to more enjoyable door in life. Getting equipped with
+                  new skills for new sets of insights into your career. MaxCoach
+                  accompany learners in every stage of learning.
+                </p>
+                <p class="mb-4">
+                  <a class="text-dark fw-semibold" href="#">
+                    Download free guidebook &rarr;
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Lates online courses / section 4 -->
+        <section id="online-courses" class="py-5">
+          <div class="container my-5">
+            <div class="row">
+              <div class="col-12 text-center my-5">
+                <p class="text-secondary">JOIN MAXCOACH AT BEST</p>
+                <h2 class="h2 title-color display-5 fw-semibold mb-3">
+                  Latest Online
+                  <span class="mb-0 text-color fw-light">Courses</span>
+                </h2>
+              </div>
+            </div>
+
+            <!--  Lates online courses / section 4 cards -->
+            <div class="row g-5">
+              <!-- First Card -->
+              <div class="course-card col-12 col-md-4">
+                <div class="card-shadow">
+                  <div class="card-img">
+                    <img
+                      src="./img/img/course-02-480x298.jpg"
+                      alt="ps4"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="card-desc p-4">
+                    <p>$40.00</p>
+                    <h5>Learning to Write as a Professional Author</h5>
+                    <div class="mb-4">
+                      <span class="opacity-50 me-5"
+                        ><i class="fa-regular fa-file-lines"></i> 20
+                        Lessons</span
+                      >
+                      <span class="opacity-50"
+                        ><i class="fa-regular fa-user"></i> 50 Students</span
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Second Card -->
+              <div class="course-card col-12 col-md-4">
+                <div class="card-shadow">
+                  <div class="card-img">
+                    <img
+                      src="./img/img/stock-full-hd-03-480x298.jpg"
+                      alt="ps4"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="card-desc p-4">
+                    <p>$0.00</p>
+                    <h5>Customer-centric Info-Tech Strategies</h5>
+                    <div class="mb-4">
+                      <span class="opacity-50 me-5"
+                        ><i class="fa-regular fa-file-lines"></i> 24
+                        Lessons</span
+                      >
+                      <span class="opacity-50"
+                        ><i class="fa-regular fa-user"></i> 769 Students</span
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Third Card -->
+              <div class="course-card col-12 col-md-4">
+                <div class="card-shadow">
+                  <div class="card-img">
+                    <img
+                      src="./img/img/stock-full-hd-04-480x298.jpg"
+                      alt="ps4"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="card-desc p-4">
+                    <p>$19.00</p>
+                    <h5>Open Programming Courses for Everyone: Python</h5>
+                    <div class="mb-4">
+                      <span class="opacity-50 me-5"
+                        ><i class="fa-regular fa-file-lines"></i> 17
+                        Lessons</span
+                      >
+                      <span class="opacity-50"
+                        ><i class="fa-regular fa-user"></i> 62 Students</span
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!--  Lates online courses / section 4 Card carousel  -->
+              <div
+                class="d-flex align-items-center justify-content-center gap-3"
+              >
+                <span class="carousel-point-main"></span>
+                <span class="carousel-point"></span>
+                <span class="carousel-point"></span>
+                <span class="carousel-point"></span>
+                <span class="carousel-point"></span>
+              </div>
+
+              <!--  Lates online courses / section 4 description  -->
+              <div class="text-center">
+                <p class="text-secondary fs-5 mb-4 lh-lg">
+                  Control your personal preference settings to get notified
+                  about appropriate courses.
+                </p>
+                <p class="mb-4">
+                  <a class="text-dark fw-semibold" href="#">
+                    View all courses &rarr;
+                  </a>
+                </p>
+              </div>
+            </div>
+
+          </div>
+          
+        </section>
+
+        <!-- Testimonials / section 5 -->
+        <!-- <section id="testimonials">
+          <div class="container py-5 mb-5">
+            <div class="row align-items-center my-5 px-5 position-relative">
+              <div class="col-12 col-md-6">
+                <p class="text-secondary">TESTIMONIALS</p>
+                <h2 class="h2 title-color display-5 fw-semibold mb-3">
+                  Why Do People
+                  <span class="mb-0 text-color fw-light">&#42;Hearts&#42;</span>
+                  Us?
+                </h2>
+                <p class="text-secondary mb-4 lh-lg mr">
+                  Seeking for verbals of our service quality? Find them here.
+                  Everything is transparent and straightforward for your sense
+                  of jusitifcation.
+                </p>
+                <p class="mb-4">
+                  <a class="text-dark fw-semibold" href="#">
+                    View all &rarr;
+                  </a>
+                </p>
+              </div>
+              <div class="col-12 col-md-6">
+                <div class="testimonial-carousel position-relative">
+                  <div class="testimonial-carousel-1 d-flex flex-column gap-3">
+                    <h4 class="fs-5 lh-base testimonial-title">
+                      Professional team of specialists and passionate mentors at
+                      reach
+                    </h4>
+                    <p class="testimonial-text text-secondary mb-4 lh-lg">
+                      I need to get a certification for English proficiency and
+                      MaxCoach is my best choice. Their tutors are smart and
+                      professional when dealing with students.
+                    </p>
+                    <div class="testimonial-img d-flex">
+                      <img src="./img/img/testimonial-avata-01.jpg" alt="" />
+                      <div class="testimonial-name ms-4">
+                        <p class="mb-0 fw-semibold">MADLEY PONDOR</p>
+                        <small class="text-black-50">/ IT Specialist</small>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="testimonial-carousel-2 d-flex flex-column gap-4">
+                    <h4 class="fs-5 lh-base testimonial-title">
+                      High level of efficiency and scientific teaching methods
+                    </h4>
+                    <p class="testimonial-text text-secondary mb-4 lh-lg">
+                      I am free to learn at my own pace, follow my own schedule
+                      and choose the subject I want to learn from the syllabus.
+                      Great study portal for people like me.
+                    </p>
+                    <div class="testimonial-img d-flex">
+                      <img
+                        src="./img/img/testimonial-avata-02.jpg"
+                        alt=""
+                        class="img-fluid"
+                      />
+                      <div class="testimonial-name ms-4">
+                        <p class="mb-0 fw-semibold">MINA HOLLACE</p>
+                        <small class="text-black-50">/ Freelancer</small>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="testimonial-carousel-3 d-flex flex-column gap-2">
+                    <h4 class="fs-5 lh-base testimonial-title">
+                      The MaxCoach team works really hard to ensure high level
+                      of quality
+                    </h4>
+                    <p class="testimonial-text text-secondary mb-4 lh-lg">
+                      I am happy with their arrangement of lessons and subjects.
+                      They reflect a scientific investigation into effective
+                      methods to adopt.
+                    </p>
+                    <div class="testimonial-img d-flex">
+                      <img
+                        src="./img/img/testimonial-avata-02.jpg"
+                        alt=""
+                        class="img-fluid"
+                      />
+                      <div class="testimonial-name ms-4">
+                        <p class="mb-0 fw-semibold">LUVIC DUBBLE</p>
+                        <small class="text-black-50">/ Private Tutor</small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section> -->
+
+        <!-- Lates From our blogs / section 7 -->
+        <!-- <section id="our-blogs" class="py-5">
+          <div class="container my-5">
+            <div class="row">
+              <div class="col-12 text-center my-5">
+                <p class="text-secondary">READ FOR MORE JOYMENT</p>
+                <h2 class="h2 title-color display-5 fw-semibold mb-3">
+                  Latest From
+                  <span class="mb-0 text-color fw-light">Our Blogs</span>
+                </h2>
+              </div>
+            </div> -->
+
+            <!--  Lates From our blogs / section 7 cards -->
+            <!-- <div class="row g-5"> -->
+              <!-- First Card -->
+              <!-- <div class="blogs-card col-12 col-md-4">
+                <div class="card-shadow">
+                  <div class="card-img">
+                    <img
+                      src="./img/img/artist-blog-03-480x325.jpeg"
+                      alt="ps4"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="card-desc my-4">
+                    <span class="text-secondary mb-3">ARTIST</span>
+                    <h5>Brush Strokes Energize Trees in Paintings</h5>
+                    <div class="mb-4">
+                      <span class="opacity-50 me-5"
+                        ><i class="fa-regular fa-file-lines"></i> May 15,
+                        2020</span
+                      >
+                      <span class="opacity-50"
+                        ><i class="fa-regular fa-eye me-2"></i>688 views</span
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div> -->
+
+              <!-- Second Card -->
+              <!-- <div class="blogs-card col-12 col-md-4">
+                <div class="card-shadow">
+                  <div class="card-img">
+                    <img
+                      src="./img/img/artist-blog-01-480x325.jpg"
+                      alt="ps4"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="card-desc my-4">
+                    <span class="text-secondary mb-3">ARTIST</span>
+                    <h5>Pocket-Sized Notebooks Hold Miniature Paintings</h5>
+                    <div class="mb-4">
+                      <span class="opacity-50 me-5"
+                        ><i class="fa-regular fa-file-lines"></i> May 15,
+                        2020</span
+                      >
+                      <span class="opacity-50"
+                        ><i class="fa-regular fa-eye me-2"></i>603 views</span
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div> -->
+
+              <!-- Third Card -->
+              <!-- <div class="blogs-card col-12 col-md-4">
+                <div class="card-shadow">
+                  <div class="card-img">
+                    <img
+                      src="./img/img/artist-blog-02-480x325.jpg"
+                      alt="ps4"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="card-desc my-4">
+                    <span class="text-secondary mb-3">ARTIST</span>
+                    <h5>Connection Between Self-Portraits and Identity</h5>
+                    <div class="mb-4">
+                      <span class="opacity-50 me-5"
+                        ><i class="fa-regular fa-file-lines"></i> May 15,
+                        2020</span
+                      >
+                      <span class="opacity-50"
+                        ><i class="fa-regular fa-eye me-2"></i>397 views</span
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div> -->
           </div>
         </section>
       </main>
