--- a/index.html
+++ b/index.html
@@ -461,12 +461,11 @@
               </div>
             </div>
 
-          </div>
-          
+          </div>          
         </section>
 
         <!-- Testimonials / section 5 -->
-        <!-- <section id="testimonials">
+        <section id="testimonials">
           <div class="container py-5 mb-5">
             <div class="row align-items-center my-5 px-5 position-relative">
               <div class="col-12 col-md-6">
@@ -554,7 +553,7 @@
               </div>
             </div>
           </div>
-        </section> -->
+        </section>
 
         <!-- Lates From our blogs / section 7 -->
         <!-- <section id="our-blogs" class="py-5">
