--- a/index.html
+++ b/index.html
@@ -555,6 +555,57 @@
           </div>
         </section>
 
+        <!-- Transform you / section 6 -->
+        <section id="transform-you">
+          <div class="container my-5 py-3">
+            <div class="row align-items-center gx-5 mt-4 ">
+              <!-- left side of section 6 -->
+              <div class="col-12 col-md-6 position-relative ps-5">
+                <img
+                  class="sec3-main-img"
+                  src="./img/img/home-3-team-image.png"
+                  alt="photo"
+                  class="img-fluid"
+                />
+                <img
+                  src="./img/img/maxcoach-shape-07-150x150.png"
+                  alt="shape"
+                />
+                <img
+                  src="./img/img/maxcoach-shape-05-150x150.png"
+                  alt="photo"
+                />
+                <img src="./img/svg/svg-0 copia.svg" alt="svg" />
+
+                <img src="./img/img/maxcoach-shape-01.png" alt="photo">
+
+                <span class="shape"></span>
+               
+              </div>
+              <!-- right side of section 6 -->
+              <div class="col-12 col-md-6 sec3-right-side">
+                <p class="text-secondary">
+                  EVERYTHING WITH <span class="fw-bold"> MAXCOACH</span>
+                </p>
+                <h2 class="h2 title-color display-5 fw-semibold mb-3">
+                  We’re Here To 
+                  <span class="mb-0 text-color fw-light"
+                    >Transform </span
+                  >You!
+                </h2>
+                <p class="text-secondary mb-4 lh-lg mr">
+                  As learners, people can enjoy great companionship from MaxCoach mentors and educators. We can help you develop and grow at your best.
+                </p>
+                <p class="mb-4">
+                  <button type="button" class="btn">
+                    Get Free Guide
+                  </button>
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- Lates From our blogs / section 7 -->
         <!-- <section id="our-blogs" class="py-5">
           <div class="container my-5">
