--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <div class="row">
               <div class="col-12 text-center my-5">
                 <p class="text-secondary">JOIN MAXCOACH AT BEST</p>
-                <h2 class="h2 title-color display-5 fw-semibold mb-3">
+                <h2 class="h2 display-5 fw-semibold mb-3">
                   Latest Online
                   <span class="mb-0 text-color fw-light">Courses</span>
                 </h2>
@@ -460,8 +460,7 @@
                 </p>
               </div>
             </div>
-
-          </div>          
+          </div>
         </section>
 
         <!-- Testimonials / section 5 -->
@@ -558,7 +557,7 @@
         <!-- Transform you / section 6 -->
         <section id="transform-you">
           <div class="container my-5 py-3">
-            <div class="row align-items-center gx-5 mt-4 ">
+            <div class="row align-items-center gx-5 mt-4">
               <!-- left side of section 6 -->
               <div class="col-12 col-md-6 position-relative ps-5">
                 <img
@@ -577,10 +576,9 @@
                 />
                 <img src="./img/svg/svg-0 copia.svg" alt="svg" />
 
-                <img src="./img/img/maxcoach-shape-01.png" alt="photo">
+                <img src="./img/img/maxcoach-shape-01.png" alt="photo" />
 
                 <span class="shape"></span>
-               
               </div>
               <!-- right side of section 6 -->
               <div class="col-12 col-md-6 sec3-right-side">
@@ -588,18 +586,16 @@
                   EVERYTHING WITH <span class="fw-bold"> MAXCOACH</span>
                 </p>
                 <h2 class="h2 title-color display-5 fw-semibold mb-3">
-                  We’re Here To 
-                  <span class="mb-0 text-color fw-light"
-                    >Transform </span
-                  >You!
+                  We’re Here To
+                  <span class="mb-0 text-color fw-light">Transform </span>You!
                 </h2>
                 <p class="text-secondary mb-4 lh-lg mr">
-                  As learners, people can enjoy great companionship from MaxCoach mentors and educators. We can help you develop and grow at your best.
+                  As learners, people can enjoy great companionship from
+                  MaxCoach mentors and educators. We can help you develop and
+                  grow at your best.
                 </p>
                 <p class="mb-4">
-                  <button type="button" class="btn">
-                    Get Free Guide
-                  </button>
+                  <button type="button" class="btn">Get Free Guide</button>
                 </p>
               </div>
             </div>
@@ -607,22 +603,22 @@
         </section>
 
         <!-- Lates From our blogs / section 7 -->
-        <!-- <section id="our-blogs" class="py-5">
-          <div class="container my-5">
+        <section id="our-blogs" class="blogs">
+          <div class="container my-5 py-5">
             <div class="row">
               <div class="col-12 text-center my-5">
                 <p class="text-secondary">READ FOR MORE JOYMENT</p>
-                <h2 class="h2 title-color display-5 fw-semibold mb-3">
-                  Latest From
+                <h2 class="h2 display-5 fw-semibold mb-3">
+                  Latest Online
                   <span class="mb-0 text-color fw-light">Our Blogs</span>
                 </h2>
               </div>
-            </div> -->
+            </div>
 
             <!--  Lates From our blogs / section 7 cards -->
-            <!-- <div class="row g-5"> -->
+            <div class="row g-5">
               <!-- First Card -->
-              <!-- <div class="blogs-card col-12 col-md-4">
+              <div class="blogs-card col-12 col-md-4">
                 <div class="card-shadow">
                   <div class="card-img">
                     <img
@@ -645,10 +641,10 @@
                     </div>
                   </div>
                 </div>
-              </div> -->
+              </div>
 
-              <!-- Second Card -->
-              <!-- <div class="blogs-card col-12 col-md-4">
+              <!-- Secind Card -->
+              <div class="blogs-card col-12 col-md-4">
                 <div class="card-shadow">
                   <div class="card-img">
                     <img
@@ -671,10 +667,10 @@
                     </div>
                   </div>
                 </div>
-              </div> -->
+              </div>
 
               <!-- Third Card -->
-              <!-- <div class="blogs-card col-12 col-md-4">
+              <div class="blogs-card col-12 col-md-4">
                 <div class="card-shadow">
                   <div class="card-img">
                     <img
@@ -698,7 +694,7 @@
                   </div>
                 </div>
               </div>
-            </div> -->
+            </div>
           </div>
         </section>
       </main>
