--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                   <div class="col-12 col-md-4">
                     <h6>Explore</h6>
                     <ul class="ps-0 mt-4">
-                      <li v-for="item, index in footerNav.navItemsExplore"><a href="#">{{item.link}}</a></li>
+                      <li class="link" v-for="item, index in footerNav.navItemsExplore"><a href="#">{{item.link}}</a></li>
                     </ul>
                   </div>
                   
@@ -683,7 +683,7 @@
                   <div class="col-12 col-md-4">
                     <h6>Information</h6>
                     <ul class="ps-0 mt-4">
-                      <li v-for="item, index in footerNav.navItemsInformation"><a href="#">{{item.link}}</a></li>                      
+                      <li class="link" v-for="item, index in footerNav.navItemsInformation"><a href="#">{{item.link}}</a></li>                      
                     </ul>
                   </div>
                   
